--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "body-parser": "~1.12.0",
     "debug": "~2.1.1",
-    "express": "~4.12.2",
+    "express": "~4.12.3",
+    "express-session": "~1.11.1",
     "jade": "~1.9.2",
     "underscore": "~1.8.3",
     "moment": "~2.10.2"
